# tcm-memo

./: LICENSE  Main.hs  Test.hs  tcm-memo.cabal
app/: Main.hs
bench/: Bench.hs
lib/Data/TCM/Memoized/: FFI.hsc
memoized-tcm/: costMatrix.cpp  dynamicCharacterOperations.c  dynamicCharacterOperations.h
src/Data/TCM/Memoized/: FFI.hsc
test/: Test.hs
