cabal-version:      2.2
category:           Example
build-type:         Simple
extra-source-files: README.md

name:               tcm-memo
version:            1.0.0.0

author:             Alex Washburn
maintainer:         github@recursion.ninja
copyright:          2018 Alex Washburn (recursion.ninja)
license:            BSD-3-Clause
license-file:       LICENSE
                    
synopsis:           A binding to a C++ hashtable for thread-safe memoization.

description:        This package is designed to provide a "minimal working example"
                    to test the cxx-sources and the cxx-options buildinfo flags.
                    The code was pulled out PCG, https://github.com/amnh/pcg


common ffi-build-info

  -- We must provide the full relative path to every C file that the project depends on.
  c-sources:        memoized-tcm/costMatrixWrapper.c
                    memoized-tcm/dynamicCharacterOperations.c

  cc-options:       --std=c11
                     
  cxx-sources:      memoized-tcm/costMatrix.cpp

  cxx-options:      --std=c++11

  default-language: Haskell2010

  -- This library is required for the C++ standard template library.
  extra-libraries:  stdc++

  -- Here we list all directories that contain C header files that the FFI tools will need
  -- to locate when preprocessing the C files. Without listing the directories containing
  -- the C header files here, the FFI preprocession (hsc2hs, c2hs,etc.) will fail to locate
  -- the requisite files.
  -- Note also, that the parent directory of the nessicary C header files must be specified.
  -- The preprocesser will not recursively look in subdirectories for C header files!
  include-dirs:     memoized-tcm


common language-spec

  build-depends:    base       >=4.10.0
                  , lens
       
  default-language: Haskell2010

  ghc-options:      -O2 -Wall

                    
common lib-build-info

  -- Other library packages from which modules are imported.
  build-depends:    deepseq
                  , hashable
                   -- For Arbitrary CULong instance
                  , QuickCheck >=2.10

  hs-source-dirs:   lib

  -- Modules exported by the library.
  other-modules:    Bio.Character.Exportable.Class
                    Data.TCM.Memoized
                    Data.TCM.Memoized.FFI

                    
library

  import:           ffi-build-info
                  , language-spec

  -- Other library packages from which modules are imported.
  build-depends:    deepseq
                  , hashable
                   -- For Arbitrary CULong instance
                  , QuickCheck >=2.10

  -- Modules exported by the library.
  exposed-modules:  Bio.Character.Exportable.Class
                    Data.TCM.Memoized
                    Data.TCM.Memoized.FFI

  hs-source-dirs:   lib
                    

executable exe-no-lib

  import:           ffi-build-info
                  , language-spec
                  , lib-build-info

  main-is:          Main.hs

  build-depends:    safe

  hs-source-dirs:   app


executable exe-with-lib

  import:           language-spec

  main-is:          Main.hs

  build-depends:    safe
                  , tcm-memo

  hs-source-dirs:   app


benchmark bench-no-lib

  import:           ffi-build-info
                  , language-spec
                  , lib-build-info

  main-is:          Bench.hs

  type:             exitcode-stdio-1.0

  build-depends:    criterion
                     
  hs-source-dirs:   bench

 
benchmark bench-with-lib

  import:           language-spec

  main-is:          Bench.hs

  type:             exitcode-stdio-1.0

  build-depends:    criterion
                  , deepseq
                  , tcm-memo
                  , QuickCheck >= 2.10

  hs-source-dirs:   bench

 
test-suite test-no-lib

  import:           ffi-build-info
                  , language-spec
                  , lib-build-info

  main-is:          Test.hs

  type:             exitcode-stdio-1.0
  
  build-depends:    deepseq
                     
  hs-source-dirs:   test


test-suite test-with-lib

  import:           language-spec

  main-is:          Test.hs

  type:             exitcode-stdio-1.0
  
  build-depends:    deepseq
                  , tcm-memo
                  , QuickCheck >= 2.10
                     
  hs-source-dirs:   test
